Prepare branch for section 4.4 tutorial

--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
   <row>
     <column cols="10" offset="1">
       <row class="page-heading" end>
-        <column cols="8">
+        <column cols="6">
           <h1 class="title">My Recipes</h1>
         </column>
         <column cols="4">
-          <div class="recipe-filter">
+          <div class="recipe-input recipe-filter">
+          </div>
+          <div class="recipe-input recipe-search">
+          </div>
+        </column>
+        <column cols="2">
+          <div class="recipe-input-selector">
           </div>
         </column>
       </row>
