Prepare branch for section 6.2 tutorial

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 
   <row>
     <column cols="10" offset="1">
+      <div class="login-form">
+      </div>
+    </column>
+  </row>
+
+  <row>
+    <column cols="10" offset="1">
       <div class="recipe-form">
       </div>
     </column>
