Section 7.1 code to add devDependencies and complete build scripts

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     </column>
   </row>
 
+  <!-- build:js assets/js/app.min.js -->
   <script src="assets/js/app.js"></script>
+  <!-- /build -->
 
 </body>
 
